--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galeria dos Sneakers</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="https://jlucascampos.github.io/e-commerce_Projeto1/styles.css" />
 </head>
 
 <body>
